--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "csv-writer": "^1.6.0",
     "express": "^4.17.1",
     "msr": "^1.3.4",
     "multistreamsmixer": "^1.2.2",
